fix problem with overflow

--- a/src/app/dashboard/dashboard.component.css
+++ b/src/app/dashboard/dashboard.component.css
@@ -360,7 +360,7 @@ li.is-active a {
     margin: 0 auto;
 }
 
-.is-active {
+.is-active-modal {
     overflow: hidden;
 }
 
